--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
             <div class="arrow"></div>
             <div class="funnel-step step-2"> <div class="step-title"> <div class="step-number">2</div> <h3>报告提炼</h3> </div> <p>数据清洗、提炼出关键洞察。数量减少，信息价值提升</p> <p class="data-scale">产出分类统计、趋势图、高频问题警报、可改进需求</p> </div>
             <div class="arrow"></div>
-            <div class="funnel-step step-3"> <div class="step-title"> <div class="step-number">3</div> <h3>报告分享</h3> </div> <p>分发结构化报告</p> <p class="data-scale">信息传递动作，每月输出≥1篇报告</p> </div>
+            <div class="funnel-step step-3"> <div class="step-title"> <div class="step-number">3</div> <h3>报告分享</h3> </div> <p>分发结构化报告</p> <p class="data-scale">信息传递动作，提炼有效需求≥5条</p> </div>
             <div class="arrow"></div>
-            <div class="funnel-step step-4"> <div class="step-title"> <div class="step-number">4</div> <h3>确定需求</h3> </div> <p>评估筛选，确认需求</p> <p class="data-scale">信息再次聚焦，确认落地需求</p> </div>
+            <div class="funnel-step step-4"> <div class="step-title"> <div class="step-number">4</div> <h3>确定需求</h3> </div> <p>评估筛选，确认需求</p> <p class="data-scale">信息再次聚焦，推动至少3条需求进入产品需求池</p> </div>
             <div class="arrow"></div>
             <div class="funnel-step step-5"> <div class="step-title"> <div class="step-number">5</div> <h3>行事历制定</h3> </div> <p>优先级排序，制定任务</p> <p class="data-scale">立项关键改进任务</p> </div>
             <div class="arrow"></div>
-            <div class="funnel-step step-6"> <div class="step-title"> <div class="step-number">6</div> <h3>用户反馈</h3> </div> <p>执行任务，验证效果</p> <p class="data-scale">需求上线后，提交用户体验分析报告</p> </div>
+            <div class="funnel-step step-6"> <div class="step-title"> <div class="step-number">6</div> <h3>用户反馈</h3> </div> <p>执行任务，验证效果</p> <p class="data-scale">需求上线后，如有需求，可提交用户体验分析报告</p> </div>
         </div>
 
         <div class="right-column-wrapper">
