--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="arrow"></div>
             <div class="funnel-step step-3"> <div class="step-title"> <div class="step-number">3</div> <h3>报告分享</h3> </div> <p>分发结构化报告</p> <p class="data-scale">信息传递动作，提炼有效需求≥5条</p> </div>
             <div class="arrow"></div>
-            <div class="funnel-step step-4"> <div class="step-title"> <div class="step-number">4</div> <h3>确定需求</h3> </div> <p>评估筛选，确认需求</p> <p class="data-scale">信息再次聚焦，推动至少3条需求进入产品需求池</p> </div>
+            <div class="funnel-step step-4"> <div class="step-title"> <div class="step-number">4</div> <h3>确定需求</h3> </div> <p>评估筛选，确认需求</p> <p class="data-scale">信息再次聚焦，推动至少3条进入需求池</p> </div>
             <div class="arrow"></div>
             <div class="funnel-step step-5"> <div class="step-title"> <div class="step-number">5</div> <h3>行事历制定</h3> </div> <p>优先级排序，制定任务</p> <p class="data-scale">立项关键改进任务</p> </div>
             <div class="arrow"></div>
